migrate to spring boot 3